# marginal

./: Cargo.toml  README.md
proptest-regressions/: normal.txt
src/: app.rs  args.rs  calibration.rs  config.rs  distribution.rs  estimate.rs  lib.rs  main.rs  normal.rs  polyfit.rs
tests/: calibration.rs
