[package]
name = "marginal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
num-traits = "0.2.16"

[dev-dependencies]
approx = "0.5.1"
proptest = "1.2.0"
rand = "0.8.5"
