[package]
name = "marginal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.3.0"
itertools = "0.11.0"
matrixmultiply = "0.3.8" # Pinned here as NDARRAY uses an old version (https://github.com/rust-ndarray/ndarray/issues/1327)
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
num-traits = "0.2.16"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
walkdir = "2"

[dev-dependencies]
approx = "0.5.1"
ndarray-rand = "0.14.0"
proptest = "1.2.0"
rand = "0.8.5"
rand_isaac = "0.3.0"
tempdir = "0.3.7"
